@@ -21,6 +21,7 @@ class Rfc822Header {
         $from = array(),
         $sender = '',
         $reply_to = array(),
+        $mail_followup_to = array(),
         $to = array(),
         $cc = array(),
         $bcc = array(),
@@ -124,6 +125,9 @@ class Rfc822Header {
                 break;
             case 'reply-to':
                 $this->reply_to = $this->parseAddress($value, true);
+                break;
+            case 'mail-followup-to':
+                $this->mail_followup_to = $this->parseAddress($value, true);
                 break;
             case 'to':
                 $this->to = $this->parseAddress($value, true);
